<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/White">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_login_field"
                android:ems="10"
                android:hint="@string/username"
                android:text="">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_login_field"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_login_button"
                android:text="@string/login"
                android:textColor="@color/White" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvVersionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="asdf"
            android:textColor="@color/Black" />
        <!--    android:textColor="@color/list_divider" />  -->

    </LinearLayout>

</ScrollView>